Changes navbar dropdown from 'Komitéer' to 'Undergrupper'

--- a/templates/base_navbar_inc.html
+++ b/templates/base_navbar_inc.html
@@ -60,7 +60,7 @@ It is meant to be included in base.html.
                         <ul class="dropdown-menu" >
                             <li>
                                 <a href="{% url "committee_overview" %}" >
-                                    Komitéer
+                                    Undergrupper
                                 </a>
                             </li>
                             <li><a href="{% url 'show_com_page' slug="styret"%}">Styret</a></li>
