--- a/nablapps/events/static/events/calendar.css
+++ b/nablapps/events/static/events/calendar.css
@@ -2,6 +2,22 @@
 /* Calendar */
 
 @media (min-width: 600px) {
+    .opt{
+        border-radius: 15px;
+        color: #337ab7;
+        background-color: #fff;
+        border: 1px solid rgb(221,221,221);
+        padding: 7px;
+        text-align: center;
+        align-items: center;
+        display: inline;
+        margin-right: 0.28em
+    }
+    select {
+        border: 0px;
+        background: transparent;
+
+    }
     .month {
         display: table;
         border-collapse: separate;
