Makes the vote view reload the page at the poll that was just voted on.

--- a/nablapps/poll/templates/poll/poll_list.html
+++ b/nablapps/poll/templates/poll/poll_list.html
@@ -33,6 +33,7 @@ Brukeravstemninger
 
 {% endwith%}
 <div class="poll well">
+    <span id="{{ poll.id }}"></span>
     <h4>{{ poll.question }}</h4>
     {% if poll.voted %}
         {% include "poll/includes/poll_result.html" %}
