--- a/nablapps/poll/templates/poll/includes/vote_form.html
+++ b/nablapps/poll/templates/poll/includes/vote_form.html
@@ -1,6 +1,6 @@
 <form action="{% url "poll_vote" poll.id %}" method="post">
     {% csrf_token %}
-    <input type="hidden" name="next" value="{% firstof next request.path %}">
+    <input type="hidden" name="next" value="{% firstof next request.path %}#{{ poll.id }}">
     {% for choice in poll.choices.all %}
         <div class="radio">
             <label>
