Remove "published" nonsense from blog
Moved it to album sidebar template

--- a/content/templates/content/includes/blog_sidebar_admin.html
+++ b/content/templates/content/includes/blog_sidebar_admin.html
@@ -3,7 +3,7 @@
 {% block sidebar-admin %}
 
     <li>
-        <a href="{% url "admin:content_blog_change" blog.id %}">
+        <a href="{% url "admin:blog_blog_change" blog.id %}">
         <span class="glyphicon glyphicon-cog"></span>
         Bloggadmin
         </a>
