--- a/contentapps/blog/templates/blog/blog_list.html
+++ b/contentapps/blog/templates/blog/blog_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load markdown %}
 {% load static %}
-{% load thumbnail %}
+{% load easy_thumbnails %}
 {% load sekizai_tags %}
 {% block title %}Blogger{% endblock %}
 
