Revert accidental ANSI encoding
Note to self: never trust online editor

--- a/nablapps/exchange/templates/exchange/ex_list.html
+++ b/nablapps/exchange/templates/exchange/ex_list.html
@@ -6,9 +6,9 @@
     <h2>Utveksling</h2>
     <form method="GET" action="">
         <input type="text" name="q" placeholder="" value="{{request.GET.q}}"/>
-        <input type="submit" value="Søk"/>
+        <input type="submit" value="SÃ¸k"/>
     </form>
-    <p>Her finner du en liste over noen universiteter hvor fysmattere har vært på utveksling:</p>
+    <p>Her finner du en liste over noen universiteter hvor fysmattere har vÃ¦rt pÃ¥ utveksling:</p>
     <div style="overflow: auto">
         <table class="table">
         <thead>
