Created a list that sorts the months

--- a/nablapps/events/templates/events/event_list.html
+++ b/nablapps/events/templates/events/event_list.html
@@ -27,20 +27,22 @@
     <li>
         <div class = opt>
             <select onchange="if (this.value) window.location.href=this.value">
-                <option value="" selected>{{ this|date:"F"|capfirst }}</option>
-                <option value="{% url "event_list" this.year 1 %}">Januar</option>
-                <option value="{% url "event_list" this.year 2 %}">Februar</option>
-                <option value="{% url "event_list" this.year 3 %}">Mars</option>
-                <option value="{% url "event_list" this.year 4 %}">April</option>
-                <option value="{% url "event_list" this.year 5 %}">Mai</option>
-                <option value="{% url "event_list" this.year 6 %}">Juni</option>
-                <option value="{% url "event_list" this.year 7 %}">Juli</option>
-                <option value="{% url "event_list" this.year 8 %}">August</option>
-                <option value="{% url "event_list" this.year 9 %}">September</option>
-                <option value="{% url "event_list" this.year 10 %}">Oktober</option>
-                <option value="{% url "event_list" this.year 11 %}">November</option>
-                <option value="{% url "event_list" this.year 12 %}">{{this.month}}</option>
-
+                <option selected>{{ this|date:"F"|capfirst }}</option>
+                <!--<option value="{% url "event_list" this.year 1 %}">Januar</option>-->
+                <!--<option value="{% url "event_list" this.year 2 %}">Februar</option>-->
+                <!--<option value="{% url "event_list" this.year 3 %}">Mars</option>-->
+                <!--<option value="{% url "event_list" this.year 4 %}">April</option>-->
+                <!--<option value="{% url "event_list" this.year 5 %}">Mai</option>-->
+                <!--<option value="{% url "event_list" this.year 6 %}">Juni</option>-->
+                <!--<option value="{% url "event_list" this.year 7 %}">Juli</option>-->
+                <!--<option value="{% url "event_list" this.year 8 %}">August</option>-->
+                <!--<option value="{% url "event_list" this.year 9 %}">September</option>-->
+                <!--<option value="{% url "event_list" this.year 10 %}">Oktober</option>-->
+                <!--<option value="{% url "event_list" this.year 11 %}">November</option>-->
+                <!--<option value="{% url "event_list" this.year 12 %}">Desember</option>-->
+                {% for i in month_list %}
+                    <option value="{% url "event_list" i.year i.month %}">{{ i|date:"F"|capfirst }}</option>
+                {% endfor %}
             </select>
         </div>
     </li>
