--- a/templates/front_page.html
+++ b/templates/front_page.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_front_page.html" %}
 {% load markdown %}
 {% load listutil %}
 {% load easy_thumbnails %}
