--- a/nablapps/interactive/static/interactive/css/advent_calendar_2018.css
+++ b/nablapps/interactive/static/interactive/css/advent_calendar_2018.css
@@ -3,7 +3,7 @@
 }
 
 h1 {
-    font-family: 'Script MT',  Arial, sans-serif;
+    font-family: 'Playball',  Arial, sans-serif;
     color: rgb(154,16,39);
     font-size: 60px;
     text-align: center;
@@ -55,7 +55,7 @@ h1 {
     z-index: 30;
     display: block;
     position: relative;
-    font-family: 'Script MT', Arial, sans-serif;
+    font-family: 'Playball', Arial, sans-serif;
     color: rgb(154,16,39);
     cursor: pointer;
 }
