--- a/nablapps/interactive/templates/interactive/advent_base_2018.html
+++ b/nablapps/interactive/templates/interactive/advent_base_2018.html
@@ -19,6 +19,7 @@
     <meta name="author" content="Nabla">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="https://nabla.no/media/jul_2016_meta.jpg">
+    <link href="https://fonts.googleapis.com/css?family=Playball&amp;subset=latin-ext" rel="stylesheet"> 
 
     {% addtoblock "css" %}
         <link rel="stylesheet" href="{% static "bootstrap/dist/css/bootstrap.min.css" %}"/>
