make possible to crop to avatar

--- a/nablapps/accounts/templates/accounts/edit_profile.html
+++ b/nablapps/accounts/templates/accounts/edit_profile.html
@@ -3,6 +3,7 @@
 {% load bootstrap3 %}
 {% load static %}
 
+{% block more_head %} {{ form.media }} {% endblock %}
 {% block title %}Endre bruker {% endblock %}
 
 {% block content %} 
@@ -10,7 +11,7 @@
     <div class="col-md-3">
         <img class="thumbnail" alt="avatar"
             {% if user.avatar %}
-                src="{% thumbnail user.avatar 150x150 %}"
+                src="{% thumbnail user.avatar 150x150 box=user.cropping %}"
             {% else %}
                 src="{% static "img/default_avatar.png" %}"
             {%endif %}>
