--- a/nablapps/interactive/templates/interactive/advent_admin.html
+++ b/nablapps/interactive/templates/interactive/advent_admin.html
@@ -26,7 +26,7 @@
             <div class="form-group">
             <img class="thumbnail user-pic" alt="avatar"
                     {% if user.avatar %}
-                        src="{% thumbnail user.avatar 50x50 %}"
+                        src="{% thumbnail user.avatar 50x50 box=user.cropping %}"
                     {% else %}
                         src="{% static "img/default_avatar.png" %}"
                     {% endif %} height="50" width="50" title="{% firstof user.get_full_name user.username %}">
@@ -45,7 +45,7 @@
             {% for part in door.participation.all %}{% with user=part.user %}
             <img class="thumbnail user-pic" alt="avatar"
                     {% if user.avatar %}
-                        src="{% thumbnail user.avatar 50x50 %}"
+                        src="{% thumbnail user.avatar 50x50 box=user.cropping %}"
                     {% else %}
                         src="{% static "img/default_avatar.png" %}"
                     {% endif %} height="50" width="50" title="{% firstof user.get_full_name user.username %}">
