--- a/nablapps/poll/templates/poll/poll_list.html
+++ b/nablapps/poll/templates/poll/poll_list.html
@@ -14,7 +14,7 @@ Brukeravstemninger
 <div class="col-md-3">
     <img class="thumbnail" alt="avatar"
          {% if user.avatar %}
-         src="{% thumbnail user.avatar 150x150 %}"
+         src="{% thumbnail user.avatar 150x150 box=user.cropping %}"
          {% elif not poll.is_user_poll %} {#Nablalogo if made by admin#}
          src="{% static "img/nabla-black.svg" %}"
          width=150
