--- a/nablapps/accounts/templates/accounts/includes/user_large.html
+++ b/nablapps/accounts/templates/accounts/includes/user_large.html
@@ -5,7 +5,7 @@
     <a href="{{ user.get_absolute_url }}">
                 <img class="thumbnail user-pic" alt="avatar"
                         {% if user.avatar %}
-                            src="{% thumbnail user.avatar 150x150 %}"
+                            src="{% thumbnail user.avatar 150x150 box=user.cropping %}"
                         {% else %}
                             src="{% static "img/default_avatar.png" %}"
                         {% endif %} title="{% firstof user.get_full_name user.username %}">
