--- a/nablapps/interactive/templates/interactive/advent_base_2018.html
+++ b/nablapps/interactive/templates/interactive/advent_base_2018.html
@@ -73,7 +73,7 @@
     {% endaddtoblock %}
 
     <h1 class="hidden-xs">Nablas julekalender {{ calendar.year }}</h1>
-    <h1 class="visible-xs-block" style="font-size: 50px;">Nablas julekalender {{ calendar.year }}</h1>
+    <h1 class="visible-xs-block" style="font-size: 50px; text-shadow: none;">Nablas julekalender {{ calendar.year }}</h1>
     <div class="advent-table">
         {% for row in doors|row_split:4 %}
             {% for door in row %}
