fix typos from last commit

--- a/nablapps/com/templates/com/com_details.html
+++ b/nablapps/com/templates/com/com_details.html
@@ -24,8 +24,8 @@
           <img class="thumbnail" alt="avatar"
               {% if membership.user.avatar %}
                   src="{% thumbnail membership.user.avatar 150x150 box=membership.user.cropping %}"
-              {% else   }
-                  src=.%static "img/default_avatar.png" %}"
+              {% else %}
+                  src="{% static "img/default_avatar.png" %}"
               {%endif %}>
         </div>
 
