Fixes multiple errors and adds functionality
Adds login requirement to submit code golf answer

Adds required js-files used by skulpt as static files

Added as static files since loading them from the web didn't work on server

Fixes some errors and class names

Removes head, body and html tags from code_golf.html since it extends base.html

Renames classes to follow naming conventions

Makes code golf count signs instead of words

Makes CodeGolf view ignore whitespaces when counting number of signs in submitted code

Updates the text in the code_golf_score template

changes 'antall ord' to 'antall tegn'

--- a/nablapps/interactive/templates/interactive/code_golf_score.html
+++ b/nablapps/interactive/templates/interactive/code_golf_score.html
@@ -5,13 +5,13 @@
     <h1>Resultat:</h1>
     <h3>Din kode: </h3>
     <p> {{ code }}</p>
-    <p><b>Antall ord: </b> {{ length }} </p>
+    <p><b>Antall tegn: </b> {{ length }} </p>
     <h3>ditt output</h3>
     <p> {{ output }} </p>
     <h3>Resultatsliste:</h3>
 
     <table style="width:100%">
-        <tr><th>Bruker</th><th>Resultat(antall ord)</th></tr>
+        <tr><th>Bruker</th><th>Resultat(antall tegn)</th></tr>
         {% for t in result_list %}
             <tr>
                 <td>{{ t.user }}</td>
