--- a/nablapps/interactive/templates/interactive/code_golf.html
+++ b/nablapps/interactive/templates/interactive/code_golf.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}Kodegolf{% endblock %}
-{% block content %}
 
-<html> 
-<head> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script> 
-<script src="http://www.skulpt.org/static/skulpt.min.js" type="text/javascript"></script> 
-<script src="http://www.skulpt.org/static/skulpt-stdlib.js" type="text/javascript"></script> 
+{% block more_head %}
 
-</head> 
+<script src="{% static "interactive/js/jquery.min.js" %}" type="text/javascript"></script> 
+<script src="{% static "interactive/js/skulpt.min.js" %}" type="text/javascript"></script> 
+<script src="{% static "interactive/js/skulpt-stdlib.js" %}" type="text/javascript"></script> 
 
-<body> 
+{% endblock %}
 
+
+{% block main %}
 <script type="text/javascript"> 
 // output functions are configurable.  This one just appends some text
 // to a pre element.
@@ -57,7 +57,8 @@ function runit() {
 
 <form> 
 <textarea id="yourcode" cols="40" rows="10">
-#Kode her (tips: fjern denne kommentaren for å få færre ord)
+#Kode her (tips: fjern disse kommentarene for å få færre tegn)
+#Whitepaces blir ikke telt
 
 </textarea><br /> 
 <button type="button" onclick="runit()">Run</button> 
@@ -72,7 +73,4 @@ function runit() {
     <button type="submit">Send</button>
 </form >
 
-</body> 
-
-</html>
-{% endblock %}
+ {% endblock %}
