--- a/nablapps/accounts/templates/accounts/view_member_profile.html
+++ b/nablapps/accounts/templates/accounts/view_member_profile.html
@@ -19,6 +19,7 @@
     </div>
     <div class="col-md-9">
         <h2>
+            God Joul
         {% firstof member.get_full_name member.username %}
 
         {% if user == member %}
