--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,156 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="no">
+    <style type="text/css">
+        @keyframes bord {
+            0%   {border-top-color: #009900;}
+            50%  {border-top-color: #cc0000;}
+            100% {border-top-color: #009900;}
+        }
+        @-moz-keyframes bord {
+            0%   {border-top-color: #009900;}
+            50%  {border-top-color: #cc0000;}
+            100% {border-top-color: #009900;}
+        }
+        @-webkit-keyframes bord {
+            0%   {border-top-color: #009900;}
+            50%  {border-top-color: #cc0000;}
+            100% {border-top-color: #009900;}
+        }
+        @-ms-keyframes bord {
+            0%   {border-top-color: #009900;}
+            50%  {border-top-color: #cc0000;}
+            100% {border-top-color: #009900;}
+        }
+        .box.event {
+            background-color: #FFFFFF;
+        }
+        .box.event header {
+            border-top-color: #cc0000;
+            animation-name: bord;
+            animation-duration: 10s;animation-iteration-count: infinite;
+        }
+        body {
+            background-position: 0% 0%;
+            -webkit-animation: snow 10s linear infinite;
+            -moz-animation: snow 10s linear infinite;
+            -ms-animation: snow 10s linear infinite;
+            animation: snow 10s linear infinite;
+        }
+        @keyframes snow {
+          0% {background-position: 0px 0px;}
+          100% {background-position: 1749px 943px;}
+        }
+        @-moz-keyframes snow {
+          0% {background-position: 0px 0px;}
+          100% {background-position: 1749px 943px;}
+        }
+        @-webkit-keyframes snow {
+          0% {background-position: 0px 0px;}
+          100% {background-position: 1749px 943px;}
+        }
+        @-ms-keyframes snow {}
+          0% {background-position: 0px 0px;}
+          100% {background-position: 1749px 943px;}
+        }
+    @keyframes bg {
+        0%   {background-color: #cc0000;border-color: #cc0000;}
+        50%  {background-color: #009900;border-color: #009900;}
+        100% {background-color: #cc0000;border-color: #cc0000;}
+    }
+    @-moz-keyframes bg {
+        0%   {background-color: #cc0000;border-color: #cc0000;}
+        50%  {background-color: #009900;border-color: #009900;}
+        100% {background-color: #cc0000;border-color: #cc0000;}
+    }
+    @-webkit-keyframes bg {
+        0%   {background-color: #cc0000;border-color: #cc0000;}
+        50%  {background-color: #009900;border-color: #009900;}
+        100% {background-color: #cc0000;border-color: #cc0000;}
+    }
+    @-ms-keyframes bg {
+        0%   {background-color: #cc0000;border-color: #cc0000;}
+        50%  {background-color: #009900;border-color: #009900;}
+        100% {background-color: #cc0000;border-color: #cc0000;}
+    }
+    #nisselue {
+        z-index: 3;
+    }
+}
+}
 
+ header nav.navbar {
+     background-color: #cc0000;
+     animation-name: bg;
+     animation-duration: 10s;
+     animation-iteration-count: infinite;
+ }
+
+    #slede {
+        visibility: hidden;
+        z-index: 3;
+        position: absolute;
+        right: 100%;
+        bottom: 0%;
+    }
+
+    @keyframes logo-anim {
+            0% {visibility:visible;right:0%;}
+            40% {visibility:visible;right:100%;}
+            50% {visibility:visible;transform:scaleX(1);right:100%;}
+            60% {visibility:visible;transform:scaleX(-1);right:80%;}
+            100% {visibility:hidden;transform:scaleX(-1);right:0%;}     
+    }
+    @-moz-keyframes logo-anim {
+            0% {visibility:visible;right:0%;}
+            40% {visibility:visible;right:100%;}
+            50% {visibility:visible;transform:scaleX(1);right:100%;}
+            60% {visibility:visible;transform:scaleX(-1);right:80%;}
+            100% {visibility:hidden;transform:scaleX(-1);right:0%;}     
+    }
+    @-webkit-keyframes logo-anim {
+            0% {visibility:visible;right:0%;}
+            40% {visibility:visible;right:100%;}
+            50% {visibility:visible;transform:scaleX(1);right:100%;}
+            60% {visibility:visible;transform:scaleX(-1);right:80%;}
+            100% {visibility:hidden;transform:scaleX(-1);right:0%;}     
+    }
+    @-ms-keyframes logo-anim {
+            0% {visibility:visible;right:0%;}
+            40% {visibility:visible;right:100%;}
+            50% {visibility:visible;transform:scaleX(1);right:100%;}
+            60% {visibility:visible;transform:scaleX(-1);right:80%;}
+            100% {visibility:hidden;transform:scaleX(-1);right:0%;}     
+    }
+    @keyframes logo-off {
+        0% {visibility: visible;right:100%;}
+        20%{transform:scaleX(-1);right:70%;}
+        100% {transform:scaleX(-1);right:0%;}
+    }
+    @-moz-keyframes logo-off {
+        0% {visibility: visible;right:100%;}
+        20%{transform:scaleX(-1);right:70%;}
+        100% {transform:scaleX(-1);right:0%;}
+    }
+    @-webkit-keyframes logo-off {
+        0% {visibility: visible;right:100%;}
+        20%{transform:scaleX(-1);right:70%;}
+       100% {transform:scaleX(-1);right:0%;}
+   }
+  @-ms-keyframes logo-off {
+        0% {visibility: visible;right:100%;}
+        20%{transform:scaleX(-1);right:70%;}
+        100% {transform:scaleX(-1);right:0%;}
+    }
+    @media (min-width: 1000px) {
+        #easteregg:hover + #slede {
+            visibility: hidden;
+            animation-name: logo-anim;
+            animation-duration: 10s;
+            animation-timing-function: linear;
+        }
+    }
+</style>
     <head>
 
         <meta charset="utf-8">
@@ -54,14 +203,13 @@
 	<![endif]-->
 
     </head>
-
-    <body>    
+	<body style="background:url('/static/img/snowflake_bg.png'); background-size: 1749px 943px;">
         <!-- Navigation -->
         <header>
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	        <a class="logo pull-left" href="/">
                     {% block header_logo %}
-                    <img src="{% static "img/nabla_logo_white.png" %}" alt="Nabla">
+                    <img src="{% static "img/nabla_logo_white_jul.png" %}" alt="Nabla" width="145" height="40">
                     {% endblock header_logo %}
 	        </a>
 
@@ -151,7 +299,9 @@
                             {# bruker-dropdown #}
                             <li class="dropdown">
                                 <a href="#bruker" class="dropdown-toggle" data-toggle="dropdown">
-                                    <span class="glyphicon glyphicon-user"></span>
+				  <img id="nisselue" src="/static/img/nisselue.png" style="width:14px;height:12px;position:absolute;z-index:2;left:17px;margin-top:-5px;">
+				  <span class="glyphicon glyphicon-user" ></span>
+
                                     {% firstof user.get_full_name user.username %}
                                     <span class="caret"></span>
                                 </a>
@@ -271,7 +421,8 @@
                     {# nablalogo #}
                     <div class="col-md-4 center" id="nablafooter">
                         <br><br>
-                        <img src="{% static "img/nabla-white.svg" %}" alt="nabla logo">
+			<img src="{% static "img/nabla-white.svg" %}" alt="nabla logo" id="easteregg">
+			<img src="/static/img/nisseslede.gif" style="width: 50%;height: 50%;" alt="nisseslede" id="slede"/>
                     </div>
 
 	        </div>
