Fixes bug on front page easteregg where the sled disappears if the sled comes between the nabla and the cursor

--- a/templates/base.html
+++ b/templates/base.html
@@ -147,7 +147,7 @@
         100% {transform:scaleX(-1);right:0%;}
     }
     @media (min-width: 1000px) {
-        #easteregg:hover + #slede {
+        #easteregg:hover + #slede, #slede {
             visibility: hidden;
             animation-name: logo-anim;
             animation-duration: 10s;
