Fixes advent door bug where the button on lottery says 'delta' even when the user tries to change their existing answer

--- a/nablapps/interactive/templates/interactive/advent_door_base_2018.html
+++ b/nablapps/interactive/templates/interactive/advent_door_base_2018.html
@@ -42,7 +42,11 @@
             </div>
             {% endif %}
             <button type="submit" class="btn btn-large btn-primary">
-                Delta i trekningen
+	      {% if part %}
+	      Endre svar
+	      {% else %}
+	      Delta i trekningen
+	      {% endif %}
             </button>
         </form>
     {% endif %}
