Only show participate in lottery in adventkalender if the user is authenticated in the 2018 template.
Also fixes some indentation

--- a/nablapps/interactive/templates/interactive/advent_door_base_2018.html
+++ b/nablapps/interactive/templates/interactive/advent_door_base_2018.html
@@ -12,10 +12,10 @@
 {% if not door.is_published %}
 <div class="alert alert-warning alert-dismissible">Dette er bare synlig fordi du har riktige rettigheter</div>
 {% endif %}
- 
+
 <div class="text">
     <p>
-    {{ door.content|markdown:"unsafe" }}
+	{{ door.content|markdown:"unsafe" }}
     </p>
     {% if door.quiz %}
     <p><a href="{{ door.quiz.get_absolute_url }}" class="btn btn-large btn-wide btn-primary">Gå til quiz!</a></p>
@@ -25,37 +25,44 @@
     {% endif %}
     {% if door.is_lottery %}
     {% if door.winner %}
-        <h1>Gratulerer med seieren!</h1>
-        {% include "accounts/includes/user_large.html" with user=door.winner %}
+    <h1>Gratulerer med seieren!</h1>
+    {% include "accounts/includes/user_large.html" with user=door.winner %}
     {% else %}
-        <form action="{% url "advent_participate" door.calendar.year door.number %}" method="post">
-            {% csrf_token %}
-            {% if door.is_text_response %}
-            <div class="form-group">
-                {% if part %}
-                <label>Endre svar:</label>
-                <textarea class="form-control" name="text" rows="3">{{ part.text }}</textarea>
-                {% else %}
-                <label>Ditt svar:</label>
-                <textarea class="form-control" name="text" rows="3"></textarea>
-                {% endif %}
-            </div>
+    
+    {# Do not show if user is not logged in. Causes errer in the redirect in participate_in_competition-view #}
+    {% if user.is_authenticated %}
+    <form action="{% url "advent_participate" door.calendar.year door.number %}" method="post">
+        {% csrf_token %}
+        {% if door.is_text_response %}
+        <div class="form-group">
+            {% if part %}
+            <label>Endre svar:</label>
+            <textarea class="form-control" name="text" rows="3">{{ part.text }}</textarea>
+            {% else %}
+            <label>Ditt svar:</label>
+            <textarea class="form-control" name="text" rows="3"></textarea>
             {% endif %}
-            <button type="submit" class="btn btn-large btn-primary">
-	      {% if part %}
-	      Endre svar
-	      {% else %}
-	      Delta i trekningen
-	      {% endif %}
-            </button>
-        </form>
-    {% endif %}
-        <h2>Med i trekningen:</h2>
-        <div>
-            {% for part in door.participation.all %}
-            {% include "accounts/includes/user_small.html" with user=part.user %}
-            {% endfor %}
         </div>
+        {% endif %}
+        <button type="submit" class="btn btn-large btn-primary">
+	    {% if part %}
+	    Endre svar
+	    {% else %}
+	    Delta i trekningen
+	    {% endif %}
+        </button>
+    </form>
+    {% else %} {# User is not authenticated #}
+    Logg inn for å delta i trekningen.
+    {% endif %}
+    
+    {% endif %}
+    <h2>Med i trekningen:</h2>
+    <div>
+        {% for part in door.participation.all %}
+        {% include "accounts/includes/user_small.html" with user=part.user %}
+        {% endfor %}
+    </div>
 
     {% endif %}
 </div>
