Adds grid layout to advent calendar 2018
This fixes an issue where the door will shift slightly up or down on some devices when clicked.

--- a/nablapps/interactive/static/interactive/css/advent_calendar_2018.css
+++ b/nablapps/interactive/static/interactive/css/advent_calendar_2018.css
@@ -13,6 +13,10 @@ h1 {
 .advent-table {
     width: 100%;
     text-align: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 100px);
+    grid-gap: 10px;
+    justify-content: center;
 }
 
 .advent-door {
