Changes codegolf models to be more reasonable and gives the views code a touch-up

--- a/nablapps/interactive/templates/interactive/code_golf.html
+++ b/nablapps/interactive/templates/interactive/code_golf.html
@@ -60,7 +60,9 @@ function runit() {
 #Kode her (tips: fjern disse kommentarene for å få færre tegn)
 #Whitepaces blir ikke telt
 
-</textarea><br /> 
+</textarea><br />
+
+{{ form.shown_code }}
 <button type="button" onclick="runit()">Run</button> 
 </form> 
 <pre id="output" ></pre> 
