Make doors that are opened and not todays door show as opened in julekalender

--- a/nablapps/interactive/templates/interactive/advent_base_2018.html
+++ b/nablapps/interactive/templates/interactive/advent_base_2018.html
@@ -77,7 +77,11 @@
     <div class="advent-table">
         {% for row in doors|row_split:4 %}
             {% for door in row %}
-                <div class="advent-door" data-open="{{ door.is_published }}">
+	    {% if door.is_previous %}
+	    <div class="advent-door advent-door-open" data-open="{{ door.is_published }}">
+	    {% else %}
+	    <div class="advent-door" data-open="{{ door.is_published }}">
+	    {% endif %}
                 <div class="advent-before"></div>
                 {% if door.is_published %}
 
