--- a/nablapps/interactive/templates/interactive/quiz_result.html
+++ b/nablapps/interactive/templates/interactive/quiz_result.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load markdown %}
 
 {% block title %}{{ quiz.title }}{% endblock %}
 
@@ -18,7 +18,7 @@ Du fikk {{ result.get_correct_count }} av {{ result.get_question_count }} riktig
 </div>
 
 {% for reply in result.questions.all %}
-    <h2>{{ forloop.counter }}. {{ reply.question.question | safe }}</h2>
+    <h2>{{ forloop.counter }}. {{ reply.question.question|markdown:"unsafe" }}</h2>
     <ul class="list-group">
         <li class="list-group-item">
             {{ reply.question.alternative_1 }}
