--- a/nablapps/interactive/templates/interactive/user_test_result.html
+++ b/nablapps/interactive/templates/interactive/user_test_result.html
@@ -6,7 +6,7 @@
 
 <h1>{{ title }}</h1>
 <div class="text">
-    <p>{{ content }}</p>
+    <p>{{ content | markdown:"unsafe" }}</p>
 </div>
 
 {% endblock %}
