Some small cosmetic changes to the code golf

--- a/nablapps/interactive/templates/interactive/code_golf.html
+++ b/nablapps/interactive/templates/interactive/code_golf.html
@@ -58,7 +58,7 @@ function runit() {
 <form> 
 <textarea id="yourcode" cols="40" rows="10">
 #Kode her (tips: fjern disse kommentarene for å få færre tegn)
-#Whitepaces blir ikke telt
+#Whitepaces blir telt
 
 </textarea><br />
 
