--- a/nablapps/interactive/templates/interactive/code_golf_error.html
+++ b/nablapps/interactive/templates/interactive/code_golf_error.html
@@ -1,2 +1,6 @@
-{{ output }}
+<p>Beklager, feil output. Riktig svar er:</p>
+<pre>{{ correct }}</pre>
+<p>Ditt output:</p>
+<pre>{{ output }}</pre>
+
 <a href={{task_id}}>Tilbake</a>
