--- a/nablapps/interactive/templates/interactive/code_golf_score.html
+++ b/nablapps/interactive/templates/interactive/code_golf_score.html
@@ -8,11 +8,9 @@
 <h1>Din kode: </h1>
 {{ code|markdown }}
 <p><b>Antall tegn: </b> {{ length }} </p>
-<h1>Output:</h1>
-<p> {{ output|markdown }} </p>
 {% endif %}
 
-<h1>Resultatsliste:</h1>
+<h1>Resultatliste:</h1>
 
 <table style="width:100%">
   <tr><th>Bruker</th><th>Resultat(antall tegn)</th></tr>
@@ -23,5 +21,10 @@
   </tr>
   {% endfor %}
 </table>
+
+{% if has_solution %}
+    <h1>Output:</h1>
+    <p> {{ output|markdown }} </p>
+{% endif %}
 
 {% endblock %}
